deployment/verdaccio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verdaccio
  namespace: verdaccio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "verdaccio.k8s.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: npm-verdaccio
            port:
              number: 4873
